# qp-rusty-crystals

./: .gitignore  Cargo.toml  NIST_VALIDATION.md  README.md  stack-check.sh  test_read_seed  test_read_seed.rs
.github/workflows/: ci.yml  codeql.yml  create-dilithium-release-proposal.yml  create-dilithium-release-tag-and-publish.yml  create-hdwallet-release-proposal.yml  create-hdwallet-release-tag-and-publish.yml  create-threshold-release-proposal.yml  create-threshold-release-tag-and-publish.yml
dilithium/: CONSTANT_TIME_TESTING.md  Cargo.toml  README.md
dilithium/benches/: dilithium_benchmarks.rs
dilithium/examples/: ct_bench.rs  memory_measure.rs  stack_probe.rs  stack_usage_demo.rs  test_drbg.rs  verify_kat_sign.rs
dilithium/src/: acvp.rs  boxed.rs  drbg.rs  drbg_wrapper.rs  errors.rs  fips202.rs  lib.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs  ntt.rs  packing.rs  params.rs  poly.rs  polyvec.rs  reduce.rs  rounding.rs  sign.rs
dilithium/src/packing/: lvl5.rs  ml_dsa_87.rs
dilithium/src/poly/: lvl5.rs  ml_dsa_87.rs
dilithium/src/polyvec/: lvl2.rs  lvl3.rs  lvl5.rs
dilithium/src/rounding/: lvl5.rs
dilithium/src/sign/: lvl2.rs  lvl3.rs  lvl5.rs  ml_dsa_44.rs  ml_dsa_65.rs  ml_dsa_87.rs
dilithium/tests/: import_stack_zeroization.rs  keygen_zeroization.rs
dilithium/tests/acvp_vectors/: keygen_ml_dsa_87.json  siggen_ml_dsa_87.json  sigver_ml_dsa_87.json
examples/: stack_usage_demo.rs
hdwallet/: Cargo.toml  README.md
hdwallet/json/: bip44_test_vectors.json
hdwallet/src/: hderive.rs  lib.rs  test_vectors.rs  tests.rs  wormhole.rs
hdwallet/tests/: wormhole_zeroization.rs
scripts/: measure_memory_use.sh  verify_kat_sign.sh
test_vectors/: SHAKE256ShortMsg.rsp
tests/: Cargo.toml  sign_integration_tests.rs
tests/src/: lib.rs  sign_integration_tests.rs  verify_integration_tests.rs
tests/src/helpers/: drbg.rs  mod.rs
threshold/: Cargo.toml  README.md  RESHARING_PLAN.md
threshold/benches/: threshold_benchmarks.rs
threshold/scripts/: compute_hyperball_params.py  keyhiding_conditional.py  keyhiding_estimator.py
threshold/src/: broadcast.rs  circl_ntt.rs  common.rs  config.rs  derivation.rs  error.rs  field.rs  keys.rs  lib.rs  ml_dsa_87.rs  params.rs  participants.rs  serde_helpers.rs  signer.rs  signing_protocol.rs
threshold/src/keygen/: README.md  dealer.rs  mod.rs
threshold/src/keygen/dkg/: mod.rs  protocol.rs  state.rs  types.rs
threshold/src/mldsa87/: mod.rs
threshold/src/protocol/: mod.rs  partial_pk.rs  primitives.rs  secret_sharing.rs  signing.rs
threshold/src/resharing/: README.md  SECURITY_PROOF.md  mod.rs  protocol.rs  types.rs
threshold/tests/: coverage_tests.rs  debug_trace.rs  derivation_tests.rs  generate_and_verify.rs  heap_zeroization.rs  integration_tests.rs  resharing_round5_error_message_dos.rs  resharing_tests.rs  round2_input_validation_dos.rs  sign_message_buffer_bounds.rs  signer_state_tests.rs  test_aggregation.rs  test_deterministic.rs  test_mu_computation.rs  test_new_api.rs  test_ntt.rs  test_round3.rs  test_round3_2of3.rs  test_round3_responses.rs  test_signature_combine.rs  test_w1_computation.rs
threshold/tests/common/: mod.rs
