[workspace]
members = ["dilithium", "hdwallet", "threshold", "tests"]
resolver = "2"

[workspace.dependencies]
# Versions matched to near-mpc for compatibility
bip39 = { version = "=2.0.0", default-features = false }
criterion = { version = "=0.5.1", features = ["html_reports"] }
getrandom = { version = "=0.2.12", features = ["js"] }
hex = { version = "=0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "=0.4.1", default-features = false }
nam-tiny-hderive = { version = "=0.3.1-nam.0", default-features = false }
qp-poseidon-core = { version = "=1.0.1" }
qp-rusty-crystals-dilithium = { path = "./dilithium", version = "2.0.0", default-features = false }
qp-rusty-crystals-hdwallet = { path = "./hdwallet", version = "1.0.0", default-features = false }
qp-rusty-crystals-threshold = { path = "./threshold", version = "1.0.0", default-features = false }
rand = { version = "=0.8.5", default-features = false, features = ["std_rng"] }
rand_core = { version = "=0.6.4", default-features = false }
rand_chacha = { version = "=0.3.1", default-features = false }
rusty-crystals-integration-tests = { path = "./tests" }
serde = { version = "=1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "=1.0.132", default-features = false, features = ["alloc"] }
sha2 = { version = "=0.10.9", default-features = false }
sha3 = { version = "=0.10.8", default-features = false }
hkdf = { version = "=0.12.4", default-features = false }
thiserror = { version = "=2.0.17", default-features = false }
zeroize = { version = "=1.8.2", default-features = false, features = ["derive"] }
bincode = { version = "=1.3.3", default-features = false }
subtle = { version = "=2.6.1", default-features = false }
