[workspace]
members = ["dilithium", "hdwallet", "tests", "threshold"]
resolver = "2"

[workspace.dependencies]
bincode = { version = "=1.3.3", default-features = false }
bip39 = { version = "=2.2.2", default-features = false }
borsh = { version = "=1.6.1", default-features = false, features = ["derive"] }
criterion = { version = "=0.5.1", features = ["html_reports"] }
getrandom = { version = "=0.2.17", features = ["js"] }
hex = { version = "=0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "=0.4.1", default-features = false }
libm = { version = "=0.2.11" }
log = { version = "=0.4.29", default-features = false }
qp-poseidon-core = { version = "=3.0.2", default-features = false }
qp-rusty-crystals-dilithium = { path = "./dilithium", version = "3.0.1", default-features = false }
qp-rusty-crystals-hdwallet = { path = "./hdwallet", version = "3.0.1", default-features = false }
qp-rusty-crystals-threshold = { path = "./threshold", version = "=1.0.0", default-features = false }
rand = { version = "=0.10.1", default-features = false, features = ["std_rng", "thread_rng"] }
rand_core = { version = "=0.10.0", default-features = false }
rusty-crystals-integration-tests = { path = "./tests" }
serde = { version = "=1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "=1.0.150", default-features = false, features = ["alloc"] }
thiserror = { version = "=2.0.18", default-features = false }
unicode-normalization = { version = "=0.1.25", default-features = false }
zeroize = { version = "=1.8.2", default-features = false, features = ["derive"] }
