[package]
name = "qp-rusty-crystals-dilithium"
version = "2.0.0"
edition = "2021"
license = "GPL-3.0"
description = "Pure Quantus RUST implementation of CRYSTALS-Dilithium digital signature scheme"
readme = "README.md"
homepage = "https://www.quantus.com"
repository = "https://github.com/Quantus-Network/qp-rusty-crystals"
keywords = [
	"cryptography",
	"dilithium",
	"post-quantum",
	"quantum",
	"quantus-network",
]
categories = ["cryptography"]

[[example]]
name = "stack_usage_demo"
path = "examples/stack_usage_demo.rs"

[dependencies]
zeroize = { workspace = true }

[dev-dependencies]
criterion = { version = "=0.5.1", features = ["html_reports"] }
rand = { version = "=0.9.2" }
dudect-bencher = { version = "=0.6" }

[[bench]]
name = "dilithium_benchmarks"
harness = false

[[example]]
name = "ct_bench"

[features]
default = []
