[package]
name = "qp-rusty-crystals-dilithium"
version = "2.5.0"
edition = "2021"
license = "GPL-3.0"
description = "Pure Quantus RUST implementation of CRYSTALS-Dilithium digital signature scheme"
readme = "README.md"
homepage = "https://www.quantus.com"
repository = "https://github.com/Quantus-Network/qp-rusty-crystals"
keywords = [
	"cryptography",
	"dilithium",
	"post-quantum",
	"quantum",
	"quantus-network",
]
categories = ["cryptography"]

[[example]]
name = "stack_usage_demo"
path = "examples/stack_usage_demo.rs"

[[example]]
name = "stack_probe"
path = "examples/stack_probe.rs"

[dependencies]
zeroize = { workspace = true }

[dev-dependencies]
criterion = { version = "=0.5.1", features = ["html_reports"] }
rand = { version = "=0.10.1", features = ["thread_rng"] }
dudect-bencher = { version = "=0.7" }
psm = "=0.1.31"
# NIST ACVP known-answer-test harness (tests only; does not affect the no_std lib).
serde_json = "1"
hex = "0.4"

[[bench]]
name = "dilithium_benchmarks"
harness = false

[features]
default = []
