[package]
name = "qp-rusty-crystals-hdwallet"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"
description = "Pure Quantus RUST implementation of HD wallet functionality with post-quantum cryptography"
readme = "README.md"
homepage = "https://www.quantus.com"
repository = "https://github.com/Quantus-Network/qp-rusty-crystals"
keywords = [
	"cryptography",
	"hdwallet",
	"post-quantum",
	"quantum",
	"quantus-network",
]
categories = ["cryptography"]

[dependencies]
qp-rusty-crystals-dilithium = { workspace = true, default-features = false }
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.9.0-beta.1", default-features = false }
bip39 = { version = "2.0.0", default-features = false }
thiserror = { workspace = true }
#qp-poseidon = { version = "0.9.1", default-features = false }
qp-poseidon = { path = "../../qp-poseidon", default-features = false }
hex-literal = {  version = "0.4.1", default-features = false }
nam-tiny-hderive = { version = "0.3.1-nam.0", default-features = false }
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
hex-literal = { version = "0.4.1", default-features = false }
