[package]
name = "qp-rusty-crystals-hdwallet"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
description = "Pure Quantus RUST implementation of HD wallet functionality with post-quantum cryptography"
readme = "README.md"
homepage = "https://www.quantus.com"
repository = "https://github.com/Quantus-Network/qp-rusty-crystals"
keywords = [
	"cryptography",
	"hdwallet",
	"post-quantum",
	"quantum",
	"quantus-network",
]
categories = ["cryptography"]

[dependencies]
qp-rusty-crystals-dilithium.workspace = true
bip39.workspace = true
thiserror.workspace = true
qp-poseidon-core.workspace = true
hex-literal.workspace = true
serde_json.workspace = true
hex.workspace = true
serde.workspace = true
zeroize.workspace = true

# Dependencies for hderive module (ported from nam-tiny-hderive)
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["arithmetic"] } 
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
hex-literal.workspace = true
rand.workspace = true
rand_core.workspace = true

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_json/std",
    "thiserror/std",
]
