[package]
name = "rusty-crystals-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["std"]
std = []

[dev-dependencies]
getrandom.workspace = true
qp-rusty-crystals-dilithium = { workspace = true, default-features = true }
qp-rusty-crystals-hdwallet = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }
aes = "=0.8.4"
cipher = "=0.4.4"
