[package]
name = "qp-rusty-crystals-threshold"
version = "1.0.0"
edition = "2021"
authors = ["Quantum Resistant Ledger"]
license = "GPL-3.0"
description = "Threshold ML-DSA signature scheme implementation"
repository = "https://github.com/quantum-resistant-ledger/qp-rusty-crystals"
keywords = ["cryptography", "ml-dsa", "post-quantum", "signatures", "threshold"]
categories = ["cryptography"]

[dependencies]
# Core dependencies
rand = { workspace = true }
rand_core = { workspace = true }
zeroize = { workspace = true }

# Logging (no_std compatible)
log = { workspace = true }

# Serialization
borsh = { workspace = true }

# Local dependencies - reuse dilithium implementation
qp-rusty-crystals-dilithium = { workspace = true }

# no_std math support
libm = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = ["rand/getrandom", "rand/std", "rand_core/std", "zeroize/std"]

[[bench]]
name = "threshold_benchmarks"
harness = false
