[package]
name = "qp-rusty-crystals-threshold"
version = "2.0.0"
edition = "2021"
authors = ["Quantus Network"]
license = "GPL-3.0"
description = "Threshold ML-DSA-87 signature scheme implementation for post-quantum threshold signing"
readme = "README.md"
homepage = "https://www.quantus.com"
repository = "https://github.com/Quantus-Network/qp-rusty-crystals"
keywords = ["cryptography", "dilithium", "ml-dsa", "post-quantum", "threshold"]
categories = ["cryptography"]

[dependencies]
# Core dependencies
zeroize = { workspace = true, features = ["alloc"] }

# Logging (no_std compatible)
log = { workspace = true }

# Serialization
borsh = { workspace = true }

# Local dependencies - reuse dilithium implementation
qp-rusty-crystals-dilithium = { workspace = true }

# no_std math support
libm = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
rand = { workspace = true }

[features]
default = ["std"]
std = ["zeroize/std"]

[[bench]]
name = "threshold_benchmarks"
harness = false
